force-app/main/default/objects/MonthlyReport__c/MonthlyReport__c.object-meta.xml
<CustomObject>
    <label>勤怠</label>
    <nameField>
        <label>勤怠</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>