force-app/main/default/objects/MonthlyReport__c/fields/AcquisitionDays__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionDays__c</fullName>
    <label>有休消化数（日）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>