force-app/main/default/objects/MonthlyReport__c/fields/AcquisitionTime__c.field-meta.xml
<CustomField>
    <fullName>AcquisitionTime__c</fullName>
    <label>有休消化数（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>