force-app/main/default/objects/MonthlyReport__c/fields/HolidayDays__c.field-meta.xml
<CustomField>
    <fullName>HolidayDays__c</fullName>
    <label>休日日数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>