force-app/main/default/objects/MonthlyReport__c/fields/HolidayWorkDays__c.field-meta.xml
<CustomField>
    <fullName>HolidayWorkDays__c</fullName>
    <label>休日出勤日数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>