force-app/main/default/objects/MonthlyReport__c/fields/HolidayWorkTime__c.field-meta.xml
<CustomField>
    <fullName>HolidayWorkTime__c</fullName>
    <label>休日労働時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>