force-app/main/default/objects/MonthlyReport__c/fields/LastAffregateDate__c.field-meta.xml
<CustomField>
    <fullName>LastAffregateDate__c</fullName>
    <label>最終集計実行日</label>
    <type>DateTime</type>
</CustomField>