force-app/main/default/objects/MonthlyReport__c/fields/MidnightTimeHour__c.field-meta.xml
<CustomField>
    <fullName>MidnightTimeHour__c</fullName>
    <label>深夜労働時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>