force-app/main/default/objects/MonthlyReport__c/fields/OverTimeHour__c.field-meta.xml
<CustomField>
    <fullName>OverTimeHour__c</fullName>
    <label>時間外労働時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>