force-app/main/default/objects/MonthlyReport__c/fields/PaidTimeHour__c.field-meta.xml
<CustomField>
    <fullName>PaidTimeHour__c</fullName>
    <label>有休消化時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>