force-app/main/default/objects/MonthlyReport__c/fields/PrescribedWorkingHour__c.field-meta.xml
<CustomField>
    <fullName>PrescribedWorkingHour__c</fullName>
    <label>所定労働時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>