force-app/main/default/objects/MonthlyReport__c/fields/RealLabor__c.field-meta.xml
<CustomField>
    <fullName>RealLabor__c</fullName>
    <label>実労働時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>