force-app/main/default/objects/MonthlyReport__c/fields/RemainingPaidDate__c.field-meta.xml
<CustomField>
    <fullName>RemainingPaidDate__c</fullName>
    <label>有休残数（日）</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>