force-app/main/default/objects/MonthlyReport__c/fields/RemainingPaidHour__c.field-meta.xml
<CustomField>
    <fullName>RemainingPaidHour__c</fullName>
    <label>有休残数（時間）</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>