force-app/main/default/objects/MonthlyReport__c/fields/SalaryMonth__c.field-meta.xml
<CustomField>
    <fullName>SalaryMonth__c</fullName>
    <label>給与月</label>
    <type>Date</type>
</CustomField>