force-app/main/default/objects/MonthlyReport__c/fields/WorkDays__c.field-meta.xml
<CustomField>
    <fullName>WorkDays__c</fullName>
    <label>出勤日数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>