force-app/main/default/objects/MonthlyReport__c/fields/WorkTimeHour__c.field-meta.xml
<CustomField>
    <fullName>WorkTimeHour__c</fullName>
    <label>総労働時間</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>